# clutch

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py  settings.py
backend/app/models/: user.py
backend/app/routers/: auth.py  github.py  insights.py  users.py
backend/app/services/: github_service.py  insights_service.py
cli/: README.md  pyproject.toml  requirements.txt  setup.py
cli/clutch_cli/: api.py  config.py  insight.py  main.py  patterns.py  repos.py  stats.py  status.py  streak.py  theme.py
cli/clutch_cli/activity/: patterns.py  stats.py  streak.py
cli/clutch_cli/authentication/: login.py  logout.py  whoami.py
cli/clutch_cli/insights/: weekly.py
cli/clutch_cli/repositories/: list.py
cli/clutch_cli/system/: status.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/common/: LoadingScreen.tsx  StatCard.tsx  TickerStrip.tsx
frontend/src/components/layout/: NavigationBar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AuthCallback.tsx  AuthenticationCallbackPage.tsx  Dashboard.tsx  DashboardPage.tsx  Landing.tsx  LandingPage.tsx  Profile.tsx  UserProfilePage.tsx
frontend/src/styles/: index.css
frontend/src/utils/: api.ts
